chamber/styles/small.css
/* prevents font size adjustments when orientation changes */
/* html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
} */
/* applies natural box layout to all elements */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
p {
  font-family: "IBM Plex Sans", sans-serif;
  /* margin: 0 2vw; */
}

p,
h4,
h5,
h5 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
}
h3 {
  padding-left: 2rem;
}
/* ---------------- BODY ------------------ */
body {
  background-color: white;
}

#info-banner {
   display: none;
  height: 3rem;
  text-align: center;
padding-top: .25rem;
color:#a67458;
font-weight: bolder;
  background-color: #c4eef290;
}
/* ---------------- HEADER ------------------ */
header {

  background-color: #025159;
  color: white;
  display: grid;
  grid-template-columns: 2fr 4fr 1fr;
  /* grid-template-rows: 40% 30% 20%; */
  /* flex-flow: column;
     align-items: center;
   justify-content: center; */
  font-family: "IBM Plex Sans Condensed", sans-serif;
  padding: 0.5rem;
}
header #discover {
   height: 25vh;
}
.social {
  grid-column: 3 / 4;
  grid-row: 1 / 3;
  margin-left: 1rem;
}

#primaryNav {
  z-index: 10;
}
header h1 {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  text-align: left;
  font-size: medium;
}
header p {
  grid-column: 2 / 3;
  font-size: x-small;
}


div.date {
  grid-column: 1 / 4;
  grid-row: 3;
  padding-top: .25rem;
  text-align: center;
  justify-content: center;
  border: 1px solid white;

 }
.hover img {
  width: 100%;
}
.hero img {
  width: 100%;
} 

header img.logo {
  width: 3.5rem;
}
header img {
  width: 1.75rem;
 
}
#discover header.serve {
  display: none;
}
/* ---------------- NAVIGATION ------------------ */
nav button {
  font-size: 2.5rem;
  background: transparent;
  border: none;
  color: #555;
}
nav {
  background-color: #a67458;
  font-family: "IBM Plex Sans", sans-serif;
  /* padding-left: 1rem; */
}
/* nav ul means child of */
nav ul {
  list-style-type: none;
}

span {
  padding-left: 2vw;
}
nav ul li a {
  display: block;
  border: none;
  padding: 0.5rem 1rem;
  text-decoration: none;
  padding: 0.8rem 2vw;
  padding-left: 2vw;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #fff;
  font-weight: 800;
  font-size: 1rem;
  /* border-top: 1px solid rgba(0, 0, 0, 0.5); 
    box-shadow: 0 1px 1px #000000;  */
}
/* active code should be placed before hover */
/* then add the active class to the list index page */
nav ul li .active  {
  background-color: rgba(0,0,0,0.2);
  
  color: white;
}
/* nav ul li a:hover {
  background-color: #c4eef2;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #025159;
  font-weight: 800;
} */



nav ul li a:hover {
  background-color: #c4eef2;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #025159;
  font-weight: 800;
}

nav ul {
  display: none;
  padding: 0;
  margin: 0;
}
nav ul.open {
  display: block;
}

/* #hamburgerBtn span:nth-child(1) {
    display: block;
  } */
#hamburgerBtn span:nth-child(2) {
  display: none;
}
#hamburgerBtn.open span:nth-child(1) {
  display: none;
}
#hamburgerBtn.open span:nth-child(2) {
  display: block;
}
body {
  background-color: white;
}
/* ---------------- MAIN ------------------ */
/* .content > main {
  background-color: #c4eef2;
} */

.hero,
.event,
.weather,
.news,
.join-us,
.spotlight {
 
  color: black;
  border-bottom: gray 1px solid;
  padding: 0.5rem;
}
main {
  display: grid;
  margin: 0 auto;
  padding: .5rem;
  
  /* grid-template-rows: repeat(5, 1fr); */
  color: #025159;
  border: .5rem solid #025159;
  
}

div.hero {
  grid-column: 1 / 1;
  grid-row: 1 / 2;
  width: 99%;
  
}

.hero h2 {
  margin: 0 0 0.5rem;
  border-bottom: 1px solid #000;
  color: white;
}
div.hero p {
  margin: 0;
  color: white;
}


div.weather {
  grid-column: 1 / 1;
  grid-row: 3 / 4;
  background-color: #c4eef290;
  width: 99%;
  }
  
div.news {
  grid-column: 1 / 1;
  width: 99%;
  text-align: center;
  /* grid-row: 4 / 5; */
}

img.power-out {
  width: 100%;
}
div.spotlight {
   grid-column: 1 / 1;
     width: 99%;
}


div.spotlight-1 {
  grid-row: 1 / 2;
  border-bottom: gray 1px solid;
  padding: 0 3rem;
  padding-bottom: 4rem;
  height: 45%;
  margin-bottom: 1rem;
  text-align: center;
}
  .spotlight-1 img {
 width: 75%; 
}
  

div.spotlight-2 {
  grid-row: 2 / 3;
  border-bottom: gray 1px solid;
  padding: 0 3rem;
  height: 45%;
  text-align: center;
}
.spotlight-2 img {
 width: 75%; 
}

.spotlight-3 {
  grid-row: 3 / 4;
  /* border: gray 1px solid; */
  padding: 0.25rem;
  display: none;
  height: 0px;
  text-align: center;
}

div.join-us {
  grid-column: 1 / 1;
  background-color: #02515950;
  width: 99%;
  padding: 0 .5rem;
  /* grid-row: 6 / 7; */
}
img.join-img {
  width: 100%;
}
/* ---------------- FOOTER ------------------ */
footer {
  /* grid-area: footer; */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 40% 20% 20% 20%;
  background-color: black;
  color: white;
  font-size: 1rem;
  padding: 0.5rem;
}
footer img {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  margin: 0 3rem 5rem 3rem;
}
footer a {
  background-color: white;
}
footer p:nth-of-type(1) {
  grid-column: 1 / 5;
  grid-row: 3 / 4;
  text-align: center;
  padding-bottom: 1rem;
  border-bottom: 1px solid white;
}

footer p:nth-of-type(2) {
  grid-column: 1 / 5;
  grid-row: 4 / 5;
  text-align: center;
  padding-top: 1rem;
}
footer p:nth-of-type(3) {
  grid-column: 1 / 5;
  grid-row: 2 / 3;
  text-align: center;
  border-top: 1px solid white;
}
/* end home page small */
/* beg of discover page */
#discover {
  display: block;
}

/* main #discover img {
  width: 100%;
} */
main #discover {
  padding: 0;
  min-height: 10rem;
}
main #discover h2 {
  text-align: center;
}
iframe.map{
  width: 100%;
  border: 2px solid #025159;
}
div.event {
  grid-column: 1 / 1;
  align-content: center;
  width: 99%;
} 
#discover div {
  text-align: center;
  margin-top: 1rem;
  background-color: #025159;
  color: white;
}
form label.sbs {
  display: block;
  font-size: .75rem;
  padding: .75rem 0;
}

/* #join footer a {
  background-color: white;
}
tbody {
  font-size: 95%;
  font-style: italic;
}
tfoot {
  font-weight: bold;
} */

/* ---------------- JOIN PAGE ------------------ */
main#join {
 font-family: "IBM Plex Sans Condensed", sans-serif;
 color: white;
 
} 
#join h2 {
  background-color: #025159;
}
fieldset {
 
  margin: 2rem .25rem;
  border: .5px solid #025159;
  border-radius: 5px;
  padding: .5rem 2%;
    background-color: #c4eef275;
}
td {
  background-color: white;
  padding-left: 1rem;
}
td, th {
  border: .5px solid #02515950;
}

legend {
  color:#025159;
    text-align: center;
  
  
}


form label.top-info, form div {
display: block;
padding-top: 1rem;
color:#a67458;
font-weight:bolder;
font-size: .8rem;
}

form label.top-info input,
form label.top-info select {
  display: block;
  font-size: 1rem;
  border: solid 1px #a67458;
  border-radius: 5px;
  padding: .75rem;
  color:#025159;
  width: 100%;
  max-width: 20rem;
  background-color: white;

}

form input.submit {
  border: none;
  background-color: #a67458;
  color: white;
  font-weight: bolder;
  border-radius: .5rem;
  padding: .75rem 1.5rem;
  /* margin: 0 0 2rem 2%; */
  width: 100%;
   text-align: center;
}
form label.top-info input:required {
  border-left: #025159 solid 6px;
  }
  form label.top-info input:required:valid {
      border-left: #c4eef2 solid 6px;
  }
 table :root {
  font-family: "IBM Plex Sans Condensed", sans-serif;

  }
  table {
    border-collapse: collapse;
    grid-column: 1 / 2;
    
  }
  
  th {
    background-color: #025159;
    font-weight: 500;
    font-size: .75rem;
    color: white;
    padding: .5rem;
      }
      tr {
        display: table-row;
      
      }

      thead th:nth-child(2) {
        background-color:#02515950;
        color: #025159;
        font-weight: bolder;
      }
      thead th:nth-child(3) {
        background-color:#02515950;
        color: #025159;
        font-weight: bolder;
      }
        thead th:nth-child(4) {
          background-color:#02515950;
          color: #025159;
        font-weight: bolder;
        }
        thead th:nth-child(5) {
          background-color:#02515950;
          color: #025159;
        font-weight: bolder;
        }
        fieldset.m-options {
          align-items: center;
        }
      

